# Paint-like

./: .gitignore  CMakeLists.txt
resources/shaders/: outline.frag  outline.vert  shader.frag  shader.vert
src/: Context.cpp  Context.h  Engine.cpp  Engine.h  Polygon.h  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  Shader.cpp  Shader.h  ShapeRegistry.h  UIHandler.cpp  UIHandler.h  main.cpp
src/Enum/: CursorState.h
src/Helper/: FileHelper.cpp  FileHelper.h
src/Shape/: Image.cpp  Image.h  Line.h  Point.h  Polygon.h
src/Tool/: CutTool.cpp  CutTool.h  ExampleTool.cpp  ExampleTool.h  ITool.h  LineTool.cpp  LineTool.h  PencilTool.cpp  PencilTool.h  PolygonTool.cpp  PolygonTool.h
